[gd_scene load_steps=4 format=3 uid="uid://px0qcydpve6b"]

[ext_resource type="Script" path="res://Scripts/Prefabs/Shapes.gd" id="1_27kap"]
[ext_resource type="PackedScene" uid="uid://bet4n7nso6jw" path="res://Scenes/Prefabs/PuzzlePiece.tscn" id="1_ijn7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_raicn"]
size = Vector2(60, 60)

[node name="FillerShape" type="Node2D" groups=["FillerShape"]]
script = ExtResource("1_27kap")

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(75, 75)
offset_left = -36.5
offset_top = -36.0
offset_right = 38.5
offset_bottom = 39.0
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="PuzzlePiece" parent="GridContainer" instance=ExtResource("1_ijn7i")]
layout_mode = 2

[node name="Area2D" type="Area2D" parent="GridContainer"]
collision_layer = 512
collision_mask = 2562

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridContainer/Area2D"]
position = Vector2(36.5, 38)
shape = SubResource("RectangleShape2D_raicn")

[connection signal="area_entered" from="GridContainer/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="GridContainer/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="GridContainer/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="GridContainer/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="GridContainer/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Area2D" to="." method="_on_area_2d_mouse_exited"]
